Controls.styl
GtkArrow
    -GtkArrow-arrow-scaling: 0.6;
    color: TextColor;
    &:hover
        color: TextColorHighlighted;

GtkCalendar

    border-radius:      2em;
    color:              TextColor;
    padding:            0.125em;

    /* INCONSISTENT - Governs any days present on the calendar that do not belong to the currently selected month. */
    &:inconsistent
        color: TextColorDimmer;

    &:selected
        background-color:       SelectionColor;
        color:                  TextColorSelected;
        font-weight:            bold;
        &:backdrop
            background-color:   HighlightColor;
            color:              TextColorHighlighted;

    &.button
        @extends .button.flat
        border-radius:  0.125em;
        &:hover
            color:      TextColorHighlighted;

    /* HEADER - Governs the calendar bar containing the month and year selection controls. */
    &.header
        shallow-outset();
        border-radius: 0.375em;

    /* HIGHLIGHT - Governs the list of weekdays at the top of the calendar. */
    &.highlight
        background-color: transparent;
        background-image: -gtk-gradient(
            linear, left top, left bottom,
            color-stop(0, transparent),
            color-stop(0.875, transparent),
            color-stop(1.0, SelectionColor));
        border-radius: 0em;
        color: TextColorLight;

        &:backdrop
            background-color: transparent;
            background-image: -gtk-gradient(
                linear, left top, left bottom,
                color-stop(0, transparent),
                color-stop(0.875, transparent),
                color-stop(1.0, HighlightColor));
            color: TextColorDim;


/* ECALENDAR - Governs the calendar control widget found within the program 'Evolution'. */
ECalendar
    background-image: none;
    background-color: InsetColor;

    .button
        @extends .button.flat;
        border-radius: 0.125em;
        GtkArrow
            color: TextColor;
        &:hover GtkArrow
            color: TextColorHighlighted;

GtkComboBox
    &.combobox-entry
        .entry
            border-radius:      2em 0em 0em 2em;
        .button
            border-radius:      0em 2em 2em 0em;
            padding:            0.375em;

    .button
        @extends .button.flat
        deep-inset();
        padding:                0.5em;

    // Governs the selected entry in the combobox (i.e. while it is still collapsed)
    .cell:hover
        color:                  TextColorHighlighted;
    // Governs the available combobox options (i.e. while it is expanded)
    //
    //      Unfortunately, for the time being, this appears to be the only way to manipulate text within the combobox menu.
    .menuitem:hover > *
        color:                  TextColorSelected;



    // .cell,
    // column,
    // column-header,
    // row,
    // tab
    //     // &.view
    //     // &.frame
    //     // .view
    //     //
    //     // &:active
    //     // &:checked
    //     // &:focused
    //     &:hover
    //     // &:inconsistent
    //     // &:insensitive
    //     // &:prelight
    //     &:selected
    //         debug();



/* GTKEXPANDER - Governs the small arrow icon found next to expandable controls.
 *
 *      This control is usually found adjacent to text labels and indicates the presence of additional UI elements that are
 *      hidden while the expander is collapsed. Perhaps the most common example can be observed in hierarchical tree
 *      controls, where any given entry within the tree can contain a list of sub-entries.
 */
.expander,
GtkExpander,
GtkExpander.expander
    -GtkExpander-expander-size:     10;
    -GtkExpander-expander-spacing:  2;

    color:      TextColorLight;
    &:backdrop
        color:  TextColor;

/* SCROLLBAR - Controls the appearance of scrollbars in container widgets. */
.scrollbar
    -GtkScrollbar-has-backward-stepper:     false;
    -GtkScrollbar-has-forward-stepper:      false;
    -GtkScrollbar-min-slider-length:        30;

    border:                                 1px solid transparent;
    border-radius:                          2em;

    &.slider
        border:                             2px solid transparent;

        &.horizontal, &.horizontal:hover
            background-image:               vgradient(ScrollbarColor);
            &:backdrop
                background-color:           ScrollbarColorDim;
                background-image:           none;
        &.vertical, &.vertical:hover
            background-image:               hgradient(ScrollbarColor);
            &:backdrop
                background-color:           ScrollbarColorDim;
                background-image:           none;

    &.trough
        shallow-inset();

.scrollbar-junction,
.scrollbar-junction:backdrop
    debug();
    // flat();
    // background-color:   transparent;



GtkSwitch
    background-image:   rgradient(White, VeryDarkSilver);
    border:             1px solid transparent;
    border-radius:      2em;

    &.trough
        shallow-inset();
        color:              TextColor;
        &:active
            background-color:   SelectionColor;
            color:              TextColorSelected;
            &:backdrop
                background-color:   HighlightColor;
                color:              TextColorHighlighted;



.separator
    color:      TextColorLight;
    &:backdrop  { color: TextColorDim; }

